# pwdbox

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  database.rs  export_service.rs  lib.rs  main.rs  password_service.rs  user_service.rs
src/components/: Button.tsx  Input.tsx  LanguageSwitcher.tsx  LoadingScreen.tsx
src/contexts/: LanguageContext.tsx
src/hooks/: useAuth.tsx
src/locales/: en.ts  index.ts  zh.ts
src/pages/: DashboardPage.tsx  LoginPage.tsx  SetupPage.tsx
src/types/: index.ts
src/utils/: api.ts
